Hourly scheduled redeploy 13c499b8cb83a4542fcdc5fe56bd072165161497

--- a/document-types/news_article.html
+++ b/document-types/news_article.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/world-location-news/advice-for-british-nationals-in-kolkata--12">Advice for British nationals in Kolkata</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/257368.es-419">Una Semana Británica en Antioquia, Colombia</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/201656.es-419">Uruguay participa en Cumbre de la Alianza para Gobierno Abierto</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/279923.es">El Reino Unido acoge la Cumbre Mundial del Derecho – 23 a 25 de febrero</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/britain-is-open-for-business">Britain is open for business</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/burma-cleaning-up-financial-crime--2">Burma: Cleaning up financial crime</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/269087.es-419">Servicio del Día del Recuerdo —Remembrance Sunday— de la Embajada Británica en la Ciudad de México</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/british-embassy-and-consulate-in-santiago-will-be-closed--2">British embassy and consulate in Santiago will be closed</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/252606.zh-tw">Chevening 英國政府獎學金開放申請</a></li>
-<li><a href="https://www.gov.uk/government/world-location-news/201405.it">Insieme in Europa per la sicurezza energetica</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/fco-answers-questions-about-irans-nuclear-programme">FCO answers questions about Iran’s nuclear programme</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/important-changes-to-consular-registration">Important changes to consular registration</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/295678.pt">#LOVEisGREAT</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/new-job-opportunity-at-the-british-embassy-buenos-aires--3">New job opportunity at the British Embassy Buenos Aires</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/171667.pt">Desafio GREAT levará jovens jornalistas `a Londres</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/baroness-anelay-visits-colombia-and-panama">Baroness Anelay visits Colombia and Panama</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/turks-and-caicos-post-cabinet-meeting-statement--32">Turks and Caicos Islands post Cabinet meeting statement</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/the-human-rights-and-democracy-fund-bid-round-2014-2015--2">The Human Rights and Democracy Fund - Bid Round 2014-2015</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/high-commissioners-blog">High Commissioner’s Blog</a></li>
+<li><a href="https://www.gov.uk/government/world-location-news/minister-for-europe-visits-switzerland">Minister for Europe visits Switzerland</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_article&amp;count=10">Source query from Search API</a></p>
 
