Hourly scheduled redeploy 4ae366ed6e27ebc407bd35479a1ef840dbfe18ed

--- a/apps/content-publisher.html
+++ b/apps/content-publisher.html
@@ -521,12 +521,16 @@
 
 <h3 id="running-the-test-suite">Running the test suite</h3>
 
-<pre><code># ruby tests
-bundle exec rspec
+<pre><code>bundle exec rake
+</code></pre>
 
-# JS tests (in console, or in browser)
-bundle exec rake jasmine:ci
+<p>To run JavaScript tests (only):</p>
+
+<pre><code># run JS tests in browser
 bundle exec rake jasmine
+
+# run JS tests on command line
+bundle exec rake jasmine:ci
 </code></pre>
 
 <blockquote>
