--- a/document-types/form.html
+++ b/document-types/form.html
@@ -364,7 +364,7 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/government/publications/application-for-a-vehicle-registration-certificate">Apply for a vehicle registration certificate (form V62)</a></li>
-<li><a href="https://www.gov.uk/government/publications/apply-to-the-eu-settlement-scheme-by-post-or-email">Apply to the EU Settlement Scheme by post or email</a></li>
+<li><a href="https://www.gov.uk/government/publications/apply-to-the-eu-settlement-scheme-by-post-or-email">Apply to the EU Settlement Scheme by post</a></li>
 <li><a href="https://www.gov.uk/government/publications/child-benefit-claim-form-ch2">Claim Child Benefit for one or more children</a></li>
 <li><a href="https://www.gov.uk/government/publications/national-insurance-get-your-national-insurance-number-in-writing-ca5403">Get your National Insurance number</a></li>
 <li><a href="https://www.gov.uk/government/publications/paye-starter-checklist">Starter checklist for PAYE</a></li>
