Hourly scheduled redeploy 4ae366ed6e27ebc407bd35479a1ef840dbfe18ed

--- a/apps/smart-answers/design/file-structure.html
+++ b/apps/smart-answers/design/file-structure.html
@@ -365,7 +365,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/3552eb57223da7a51db809f82d6c4255f7373a4e">6 Jul 2021</a>
 </div>
 
   <h1 class="page-title">smart-answers: File structure</h1>
@@ -379,7 +379,7 @@
 |__ smart_answer_flows
     |__ &lt;flow-name&gt;.rb (Required: Flow and question logic)
     |__ &lt;flow-name&gt;
-    |   |__ &lt;flow-name&gt;.erb (Optional: Content for the landing page)
+    |   |__ start.erb (Optional: Content for the landing page)
     |   |__ outcomes
     |   |   |__ &lt;outcome-name&gt;.erb (Optional: Content for each outcome page)
     |   |   |__ _&lt;partial-name&gt;.erb (Optional: Useful when you need to share content between outcome templates)
