--- a/apps/smart-answers/design/erb-templates/landing-page-template.html
+++ b/apps/smart-answers/design/erb-templates/landing-page-template.html
@@ -365,13 +365,13 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/3552eb57223da7a51db809f82d6c4255f7373a4e">6 Jul 2021</a>
 </div>
 
   <h1 class="page-title">smart-answers: Landing page template</h1>
 
   
-<p>Landing page templates live in <code>lib/smart_answer_flows/&lt;flow-name&gt;/&lt;flow-name-with-underscores&gt;.erb</code>.</p>
+<p>Landing page templates live in <code>lib/smart_answer_flows/&lt;flow-name&gt;/start.erb</code>.</p>
 <h2 id="content-types">Content types</h2>
 <p>The templates can contain content for any of the following keys:</p>
 <h3 id="title"><code>:title</code></h3>
