Hourly scheduled redeploy 4ae366ed6e27ebc407bd35479a1ef840dbfe18ed

--- a/document-types/international_development_fund.html
+++ b/document-types/international_development_fund.html
@@ -362,8 +362,8 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/international-development-funding/sustainable-manufacturing-and-environmental-pollution-smep-programme-reducing-plastics-pollution-in-sub-saharan-africa-and-south-asia-research-and-innovation">Sustainable Manufacturing and Environmental Pollution (SMEP) Programme - Reducing plastics pollution in Sub-Saharan Africa and South Asia  (Research and Innovation)</a></li>
-<li><a href="https://www.gov.uk/international-development-funding/user-perspectives-new-trends-in-digital-humanitarian-action-research-and-innovation">User Perspectives: new trends in digital humanitarian action (research and innovation)</a></li>
+<li><a href="https://www.gov.uk/international-development-funding/sustainable-manufacturing-and-environmental-pollution-smep-programme-reducing-plastics-pollution-in-sub-saharan-africa-and-south-asia-research-and-innovation">Sustainable Manufacturing and Environmental Pollution (SMEP) Programme - Reducing plastics pollution in Sub-Saharan Africa and South Asia </a></li>
+<li><a href="https://www.gov.uk/international-development-funding/user-perspectives-new-trends-in-digital-humanitarian-action-research-and-innovation">User Perspectives: new trends in digital humanitarian action</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/uk-aid-direct">UK Aid Direct</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/gsma-innovation-fund-for-digital-urban-services-research-and-innovation">GSMA Innovation Fund for Digital Urban Services (Research and Innovation)</a></li>
 <li><a href="https://www.gov.uk/international-development-funding/global-innovation-fund">Global Innovation Fund</a></li>
