Hourly scheduled redeploy f58556cb25c17bfc76bf47f630ad29080f893126

--- a/document-types/aaib_report.html
+++ b/document-types/aaib_report.html
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-cirrus-sr-22-n8163p">AAIB investigation to Cirrus SR 22, N8163P    </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-replica-royal-aircraft-factory-be2c-g-awyi">AAIB investigation to Replica Royal Aircraft Factory BE2c, G-AWYI  </a></li>
 <li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-dji-phantom-4-rtk-uas-registration-n-slash-a">AAIB investigation to DJI Phantom 4 RTK, (UAS registration n/a)</a></li>
-<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-rotorway-executive-90-g-bvtv-4-november-2020">AAIB investigation to Rotorway Executive 90, G-BVTV, 4 November 2020</a></li>
+<li><a href="https://www.gov.uk/aaib-reports/aaib-investigation-to-schleicher-ash-25-e-g-cfst">AAIB investigation to Schleicher ASH 25 E, G-CFST  </a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=aaib_report&amp;count=10">Source query from Search API</a></p>
 
