--- a/document-types/consultation_outcome.html
+++ b/document-types/consultation_outcome.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: consultation_outcome</h1>
 
-  <p>There are <strong>4626</strong> pages with document type
+  <p>There are <strong>4627</strong> pages with document type
 &lsquo;consultation_outcome&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -364,14 +364,14 @@
 <ul>
 <li><a href="https://www.gov.uk/government/consultations/arrangements-for-non-exam-assessment-for-qualifications-in-2022">Arrangements for non-exam assessment for qualifications in 2022</a></li>
 <li><a href="https://www.gov.uk/government/consultations/introducing-e10-petrol">Introducing E10 petrol</a></li>
+<li><a href="https://www.gov.uk/government/consultations/keeping-children-safe-in-education-proposed-revisions-2021">Keeping children safe in education: proposed revisions 2021</a></li>
+<li><a href="https://www.gov.uk/government/consultations/first-homes">First Homes</a></li>
 <li><a href="https://www.gov.uk/government/consultations/making-vaccination-a-condition-of-deployment-in-older-adult-care-homes">Making vaccination a condition of deployment in older adult care homes</a></li>
 <li><a href="https://www.gov.uk/government/consultations/further-advertising-restrictions-for-products-high-in-fat-salt-and-sugar">Further advertising restrictions for products high in fat, salt and sugar</a></li>
-<li><a href="https://www.gov.uk/government/consultations/first-homes">First Homes</a></li>
 <li><a href="https://www.gov.uk/government/consultations/the-future-homes-standard-changes-to-part-l-and-part-f-of-the-building-regulations-for-new-dwellings">The Future Homes Standard: changes to Part L and Part F of the Building Regulations for new dwellings</a></li>
 <li><a href="https://www.gov.uk/government/consultations/subsidy-control-designing-a-new-approach-for-the-uk">Subsidy control: designing a new approach for the UK</a></li>
 <li><a href="https://www.gov.uk/government/consultations/stopping-movement-of-staff-between-care-settings">Stopping movement of staff between care settings</a></li>
-<li><a href="https://www.gov.uk/government/consultations/implementation-of-the-investment-firms-prudential-regime-and-basel-3-standards-consultation">Implementation of the Investment Firms Prudential Regime and Basel 3 standards consultation</a></li>
-<li><a href="https://www.gov.uk/government/consultations/exchange-of-driving-licences-issued-in-taiwan-the-united-arab-emirates-ukraine-and-the-republic-of-north-macedonia">Exchange of driving licences issued in Taiwan, the United Arab Emirates, Ukraine and the Republic of North Macedonia</a></li>
+<li><a href="https://www.gov.uk/government/consultations/energy-company-obligation-eco3-2018-to-2022">Energy Company Obligation: ECO3, 2018 to 2022</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=consultation_outcome&amp;count=10">Source query from Search API</a></p>
 
