--- a/document-types/decision.html
+++ b/document-types/decision.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: decision</h1>
 
-  <p>There are <strong>7236</strong> pages with document type
+  <p>There are <strong>7239</strong> pages with document type
 &lsquo;decision&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -372,7 +372,7 @@
 <li><a href="https://www.gov.uk/government/publications/regulatory-judgements-and-regulatory-notices">Regulatory judgements and notices, and gradings under review</a></li>
 <li><a href="https://www.gov.uk/government/publications/disapplication-notice-school-inspections-legislation-changes">Disapplication notice: school inspections legislation changes</a></li>
 <li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-joshua-reed">Teacher misconduct panel outcome: Mr Joshua Reed</a></li>
-<li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mrs-sarah-brown">Teacher misconduct panel outcome: Mrs Sarah Brown</a></li>
+<li><a href="https://www.gov.uk/government/publications/teacher-misconduct-panel-outcome-mr-robert-anderson">Teacher misconduct panel outcome: Mr Robert Anderson</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=decision&amp;count=10">Source query from Search API</a></p>
 
