--- a/document-types/fatality_notice.html
+++ b/document-types/fatality_notice.html
@@ -368,10 +368,10 @@
 <li><a href="https://www.gov.uk/government/fatalities/major-sean-birchall-killed-in-afghanistan">Major Sean Birchall killed in Afghanistan</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/lieutenant-colonel-rupert-thorneloe-and-trooper-joshua-hammond-killed-in-afghanistan">Lieutenant Colonel Rupert Thorneloe and Trooper Joshua Hammond killed in Afghanistan</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/captain-andrew-griffiths-dies-of-wounds-sustained-in-afghanistan">Captain Andrew Griffiths dies of wounds sustained in Afghanistan</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/soldier-from-14th-signals-regiment-killed-in-afghanistan">Lance Corporal James Brynin killed in Afghanistan</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/marine-travis-mackin-killed-in-helmand">Marine Travis Mackin killed in Helmand</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/soldier-from-14th-signals-regiment-killed-in-afghanistan">Lance Corporal James Brynin killed in Afghanistan</a></li>
 <li><a href="https://www.gov.uk/government/fatalities/death-of-british-serviceman-in-iraq-signaller-paul-william-didsbury-21st-signal-regiment-air-support">Death of British Serviceman in Iraq - Signaller Paul William Didsbury, 21st Signal Regiment (Air Support)</a></li>
-<li><a href="https://www.gov.uk/government/fatalities/corporal-darren-bonner-killed-in-afghanistan">Corporal Darren Bonner killed in Afghanistan</a></li>
+<li><a href="https://www.gov.uk/government/fatalities/warrant-officer-class-2-leonard-thomas-guardsman-craig-roderick-and-guardsman-apete-tuisovurua-killed-in-afghanistan">Warrant Officer Class 2 Leonard Thomas, Guardsman Craig Roderick and Guardsman Apete Tuisovurua killed in Afghanistan</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=fatality_notice&amp;count=10">Source query from Search API</a></p>
 
