--- a/document-types/asylum_support_decision.html
+++ b/document-types/asylum_support_decision.html
@@ -367,11 +367,11 @@
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mk-v-secretary-of-state-for-the-home-department-as-13-12-30731">MK v Secretary of State for the Home Department: AS/13/12/30731</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/cc-v-secretary-of-state-for-the-home-department-as-12-07-28659">CC v Secretary of State for the Home Department: AS/12/07/28659</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/pa-and-ma-v-secretary-of-state-for-the-home-department-as-20-09-42386-and-as-20-09-42397">PA and MA v Secretary of State for the Home Department: AS/20/09/42386 and AS/20/09/42397</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/dag-v-secretary-of-state-for-the-home-department-as-12-02-28098">DAG v Secretary of State for the Home Department: AS/12/02/28098</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/hm-v-secretary-of-state-for-the-home-department-as-15-07-33510">HM v Secretary of State for the Home Department: AS/15/07/33510</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mya-v-secretary-of-state-for-the-home-department-as-19-02-39259">MYA v Secretary of State for the Home Department: AS/19/02/39259</a></li>
+<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/kk-v-secretary-of-state-for-the-home-department-as-15-07-33514">KK v Secretary of State for the Home Department: AS/15/07/33514</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/fk-v-secretary-of-state-for-the-home-department-as-01-10-0957">FK v Secretary of State for the Home Department: AS/01/10/0957</a></li>
 <li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/ab-v-secretary-of-state-for-the-home-department-as-14-07-31653">AB v Secretary of State for the Home Department: AS/14/07/31653</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/at-v-secretary-of-state-for-the-home-department-as-18-10-38725">AT v Secretary of State for the Home Department: AS/18/10/38725</a></li>
-<li><a href="https://www.gov.uk/asylum-support-tribunal-decisions/mya-v-secretary-of-state-for-the-home-department-as-19-02-39259">MYA v Secretary of State for the Home Department: AS/19/02/39259</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=asylum_support_decision&amp;count=10">Source query from Search API</a></p>
 
