--- a/document-types/authored_article.html
+++ b/document-types/authored_article.html
@@ -363,15 +363,15 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/government/speeches/prime-ministers-article-in-the-daily-telegraph-21-june-2021">&ldquo;We&rsquo;re restoring Britain&rsquo;s place as a scientific superpower&rdquo;</a></li>
+<li><a href="https://www.gov.uk/government/speeches/health-secretary-opinion-piece-in-the-mail-on-sunday">Health Secretary opinion piece in the Mail on Sunday</a></li>
 <li><a href="https://www.gov.uk/government/speeches/hmci-commentary-putting-children-and-young-people-with-send-at-the-heart-of-our-recovery-plans">HMCI commentary: putting children and young people with SEND at the heart of our recovery plans</a></li>
 <li><a href="https://www.gov.uk/government/speeches/how-qualifications-will-be-awarded-in-2021">How qualifications will be awarded in 2021</a></li>
-<li><a href="https://www.gov.uk/government/speeches/health-secretary-opinion-piece-in-the-mail-on-sunday">Health Secretary opinion piece in the Mail on Sunday</a></li>
 <li><a href="https://www.gov.uk/government/speeches/a-definition-of-antisemitism">A definition of antisemitism</a></li>
-<li><a href="https://www.gov.uk/government/speeches/g7-summit-uniting-for-a-fairer-greener-and-prosperous-future">G7 Summit — uniting for a fairer, greener and prosperous future</a></li>
+<li><a href="https://www.gov.uk/government/speeches/research-commentary-teaching-about-sex-sexual-orientation-and-gender-reassignment">Research commentary: teaching about sex, sexual orientation and gender reassignment</a></li>
 <li><a href="https://www.gov.uk/government/speeches/evaluating-the-education-inspection-framework-for-schools-and-further-education-and-skills-providers">Evaluating the education inspection framework: for schools and further education and skills providers</a></li>
-<li><a href="https://www.gov.uk/government/speeches/social-care-commentary-multi-agency-safeguarding-arrangements">Social care commentary: multi-agency safeguarding arrangements</a></li>
 <li><a href="https://www.gov.uk/government/speeches/what-makes-a-good-leader">What makes a good leader?</a></li>
 <li><a href="https://www.gov.uk/government/speeches/commentary-on-curriculum-research-phase-3">Commentary on curriculum research - phase 3</a></li>
+<li><a href="https://www.gov.uk/government/speeches/social-care-commentary-multi-agency-safeguarding-arrangements">Social care commentary: multi-agency safeguarding arrangements</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=authored_article&amp;count=10">Source query from Search API</a></p>
 
