--- a/document-types/case_study.html
+++ b/document-types/case_study.html
@@ -364,14 +364,14 @@
 <ul>
 <li><a href="https://www.gov.uk/government/case-studies/how-the-dvla-deployed-a-chatbot-and-improved-customer-engagement">How the DVLA deployed a chatbot and improved customer engagement</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/dstl-careers-junayd-principal-space-scientist">Dstl careers: Junayd, principal space scientist</a></li>
-<li><a href="https://www.gov.uk/government/case-studies/tax-avoidance-dont-get-caught-out">Tax avoidance - don&rsquo;t get caught out</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/timing-of-the-magnox-reactor-decommissioning-strategy">Timing of the Magnox Reactor Decommissioning Strategy</a></li>
+<li><a href="https://www.gov.uk/government/case-studies/tax-avoidance-dont-get-caught-out">Tax avoidance - don&rsquo;t get caught out</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/mental-health-and-wellbeing">Mental Health and Wellbeing</a></li>
-<li><a href="https://www.gov.uk/government/case-studies/ponds-and-silos-at-sellafield">Ponds and Silos at Sellafield</a></li>
-<li><a href="https://www.gov.uk/government/case-studies/quality-and-continuous-improvement-first-generation-magnox-storage-pond-fgmsp">Quality and Continuous Improvement - First Generation Magnox Storage Pond (FGMSP)</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/optimising-site-end-states">Optimising Site End States</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/thermal-treatment">Thermal Treatment</a></li>
+<li><a href="https://www.gov.uk/government/case-studies/ponds-and-silos-at-sellafield">Ponds and Silos at Sellafield</a></li>
 <li><a href="https://www.gov.uk/government/case-studies/exercise-purple-lumi">Exercise Purple Lumi</a></li>
+<li><a href="https://www.gov.uk/government/case-studies/export-of-high-enriched-uranium-in-support-of-medical-isotope-production">Export of High Enriched Uranium in Support of Medical Isotope Production</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=case_study&amp;count=10">Source query from Search API</a></p>
 
