--- a/document-types/guidance.html
+++ b/document-types/guidance.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: guidance</h1>
 
-  <p>There are <strong>21077</strong> pages with document type
+  <p>There are <strong>21078</strong> pages with document type
 &lsquo;guidance&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -367,12 +367,12 @@
 <li><a href="https://www.gov.uk/government/publications/organisation-testing-registration-record-of-users">Organisation testing registration: record of users</a></li>
 <li><a href="https://www.gov.uk/government/publications/list-of-private-providers-of-coronavirus-testing">Private providers of coronavirus (COVID-19) testing</a></li>
 <li><a href="https://www.gov.uk/government/publications/eu-settlement-scheme-application-processing-times">EU Settlement Scheme: application processing times</a></li>
-<li><a href="https://www.gov.uk/government/publications/personal-information-use-in-borders-immigration-and-citizenship">Borders, immigration and citizenship: privacy information notice</a></li>
 <li><a href="https://www.gov.uk/government/publications/guidance-for-contacts-of-people-with-possible-or-confirmed-coronavirus-covid-19-infection-who-do-not-live-with-the-person">Guidance for contacts of people with confirmed coronavirus (COVID-19) infection who do not live with the person</a></li>
-<li><a href="https://www.gov.uk/government/publications/human-augmentation-the-dawn-of-a-new-paradigm">Human Augmentation – The Dawn of a New Paradigm</a></li>
+<li><a href="https://www.gov.uk/government/publications/personal-information-use-in-borders-immigration-and-citizenship">Borders, immigration and citizenship: privacy information notice</a></li>
 <li><a href="https://www.gov.uk/government/publications/face-coverings-when-to-wear-one-and-how-to-make-your-own">Face coverings: when to wear one, exemptions, and how to make one</a></li>
 <li><a href="https://www.gov.uk/government/publications/instructions-for-covid-19-self-test">Coronavirus (COVID-19) rapid lateral flow home test kit instructions</a></li>
-<li><a href="https://www.gov.uk/government/publications/success-profiles">Success Profiles</a></li>
+<li><a href="https://www.gov.uk/government/publications/human-augmentation-the-dawn-of-a-new-paradigm">Human Augmentation – The Dawn of a New Paradigm</a></li>
+<li><a href="https://www.gov.uk/government/publications/covid-19-response-summer-2021-roadmap">COVID-19 Response: Summer 2021 (Roadmap)</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=guidance&amp;count=10">Source query from Search API</a></p>
 
