--- a/document-types/impact_assessment.html
+++ b/document-types/impact_assessment.html
@@ -362,16 +362,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/publications/skills-and-post-16-education-bill-impact-assessment-and-jchr-memorandum">Skills and Post-16 Education Bill: impact assessment and JCHR memorandum</a></li>
 <li><a href="https://www.gov.uk/government/publications/equality-analysis-for-the-kickstart-scheme">Equality analysis for the Kickstart Scheme</a></li>
+<li><a href="https://www.gov.uk/government/publications/skills-and-post-16-education-bill-impact-assessment-and-jchr-memorandum">Skills and Post-16 Education Bill: impact assessment and JCHR memorandum</a></li>
 <li><a href="https://www.gov.uk/government/publications/dwp-bereavement-service">DWP Bereavement Service</a></li>
-<li><a href="https://www.gov.uk/government/publications/higher-education-grants-and-loans-2021-to-2022-equality-analysis">Higher education grants and loans 2021 to 2022: equality analysis</a></li>
 <li><a href="https://www.gov.uk/government/publications/school-resource-management-adviser-srma-pilot-evaluation">School resource management adviser (SRMA) pilot evaluation</a></li>
-<li><a href="https://www.gov.uk/government/publications/ofsteds-phased-return-to-inspection">Ofsted&rsquo;s return to routine inspection activity</a></li>
 <li><a href="https://www.gov.uk/government/publications/impact-assessment-of-the-mental-capacity-amendment-act-2019">Impact assessment of the Mental Capacity (Amendment) Act 2019</a></li>
-<li><a href="https://www.gov.uk/government/publications/volume-2-community-area-reports-and-map-books-for-the-hs2-phase-2a-supplementary-environmental-statement-2-and-additional-provision-2-environmental-s">Volume 2: Community area reports and map books for the HS2 Phase 2a Supplementary Environmental Statement 2 and Additional Provision 2 Environmental Statement</a></li>
+<li><a href="https://www.gov.uk/government/publications/higher-education-grants-and-loans-2021-to-2022-equality-analysis">Higher education grants and loans 2021 to 2022: equality analysis</a></li>
+<li><a href="https://www.gov.uk/government/publications/ofsteds-phased-return-to-inspection">Ofsted&rsquo;s return to routine inspection activity</a></li>
 <li><a href="https://www.gov.uk/government/publications/reception-baseline-assessment-equality-impact-assessment">Reception baseline assessment: equality impact assessment</a></li>
-<li><a href="https://www.gov.uk/government/publications/personal-independence-payment-assessment-criteria-equality-analysis">Personal Independence Payment assessment criteria equality analysis</a></li>
+<li><a href="https://www.gov.uk/government/publications/volume-2-community-area-reports-and-map-books-for-the-hs2-phase-2a-supplementary-environmental-statement-2-and-additional-provision-2-environmental-s">Volume 2: Community area reports and map books for the HS2 Phase 2a Supplementary Environmental Statement 2 and Additional Provision 2 Environmental Statement</a></li>
+<li><a href="https://www.gov.uk/government/publications/the-future-buildings-standard-consultation-impact-assessment">The Future Buildings Standard consultation impact assessment</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=impact_assessment&amp;count=10">Source query from Search API</a></p>
 
