--- a/document-types/independent_report.html
+++ b/document-types/independent_report.html
@@ -363,16 +363,16 @@
         </table>
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
-<li><a href="https://www.gov.uk/government/publications/priority-groups-for-coronavirus-covid-19-vaccination-advice-from-the-jcvi-30-december-2020">Priority groups for coronavirus (COVID-19) vaccination: advice from the JCVI, 30 December 2020</a></li>
 <li><a href="https://www.gov.uk/government/publications/safety-digest-032021-llandegai-tunnel">Safety digest 03/2021: Llandegai tunnel</a></li>
-<li><a href="https://www.gov.uk/government/publications/jcvi-interim-advice-on-a-potential-coronavirus-covid-19-booster-vaccine-programme-for-winter-2021-to-2022">JCVI interim advice on a potential coronavirus (COVID-19) booster vaccine programme for winter 2021 to 2022</a></li>
+<li><a href="https://www.gov.uk/government/publications/priority-groups-for-coronavirus-covid-19-vaccination-advice-from-the-jcvi-30-december-2020">Priority groups for coronavirus (COVID-19) vaccination: advice from the JCVI, 30 December 2020</a></li>
 <li><a href="https://www.gov.uk/government/publications/initial-teacher-training-itt-market-review-report">Initial teacher training (ITT) market review report</a></li>
+<li><a href="https://www.gov.uk/government/publications/jcvi-interim-advice-on-a-potential-coronavirus-covid-19-booster-vaccine-programme-for-winter-2021-to-2022">JCVI interim advice on a potential coronavirus (COVID-19) booster vaccine programme for winter 2021 to 2022</a></li>
 <li><a href="https://www.gov.uk/government/publications/final-report-the-economics-of-biodiversity-the-dasgupta-review">Final Report - The Economics of Biodiversity: The Dasgupta Review</a></li>
 <li><a href="https://www.gov.uk/government/publications/taskforce-on-innovation-growth-and-regulatory-reform-independent-report">Taskforce on Innovation, Growth and Regulatory Reform independent report</a></li>
 <li><a href="https://www.gov.uk/government/publications/the-report-of-the-commission-on-race-and-ethnic-disparities">The report of the Commission on Race and Ethnic Disparities</a></li>
 <li><a href="https://www.gov.uk/government/publications/air-accident-monthly-bulletin-june-2021">Air accident monthly bulletin June 2021</a></li>
-<li><a href="https://www.gov.uk/government/publications/use-of-the-astrazeneca-covid-19-vaccine-jcvi-statement-7-may-2021">Use of the AstraZeneca COVID-19 vaccine: JCVI statement, 7 May 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/manchester-arena-inquiry-volume-1-security-for-the-arena">Manchester Arena Inquiry Volume 1: Security for the Arena</a></li>
+<li><a href="https://www.gov.uk/government/publications/report-of-the-mid-staffordshire-nhs-foundation-trust-public-inquiry">Report of the Mid Staffordshire NHS Foundation Trust Public Inquiry</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=independent_report&amp;count=10">Source query from Search API</a></p>
 
