--- a/document-types/national_statistics.html
+++ b/document-types/national_statistics.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: national_statistics</h1>
 
-  <p>There are <strong>11380</strong> pages with document type
+  <p>There are <strong>11385</strong> pages with document type
 &lsquo;national_statistics&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -371,7 +371,7 @@
 <li><a href="https://www.gov.uk/government/statistics/pupil-absence-in-schools-in-england-autumn-term-2020">Pupil absence in schools in England: autumn term 2020</a></li>
 <li><a href="https://www.gov.uk/government/statistics/reported-road-casualties-great-britain-provisional-results-2020">Reported road casualties Great Britain, provisional results: 2020</a></li>
 <li><a href="https://www.gov.uk/government/statistics/uk-house-price-index-summary-april-2021">UK House Price Index summary: April 2021</a></li>
-<li><a href="https://www.gov.uk/government/statistics/monthly-property-transactions-completed-in-the-uk-with-value-40000-or-above">Monthly property transactions completed in the UK with value of £40,000 or above</a></li>
+<li><a href="https://www.gov.uk/government/statistics/reported-road-casualties-great-britain-annual-report-2019">Reported road casualties Great Britain, annual report: 2019</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=national_statistics&amp;count=10">Source query from Search API</a></p>
 
