--- a/document-types/news_story.html
+++ b/document-types/news_story.html
@@ -331,7 +331,7 @@
           <main id="content" class="technical-documentation" data-module="anchored-headings">
               <h1 class="page-title">Document type: news_story</h1>
 
-  <p>There are <strong>42677</strong> pages with document type
+  <p>There are <strong>42678</strong> pages with document type
 &lsquo;news_story&rsquo; in the GOV.UK search index.</p>
 <h2 id='rendering-apps'>Rendering apps</h2><p>This document type is rendered by:</p>
 
@@ -370,9 +370,9 @@
 <li><a href="https://www.gov.uk/government/news/graduate-route-for-best-and-brightest-launches">Graduate route for best and brightest launches</a></li>
 <li><a href="https://www.gov.uk/government/news/weekly-national-flu-and-covid-19-surveillance-reports-published">Weekly national flu and COVID-19 surveillance reports published</a></li>
 <li><a href="https://www.gov.uk/government/news/speak-up-and-help-beat-coronavirus-covid-19">Speak up and help beat coronavirus (COVID-19)</a></li>
+<li><a href="https://www.gov.uk/government/news/artificial-intelligence-used-on-army-operation-for-the-first-time">Artificial Intelligence used on Army operation for the first time</a></li>
 <li><a href="https://www.gov.uk/government/news/proposed-new-timetable-for-state-pension-age-increases">Proposed new timetable for State Pension age increases</a></li>
 <li><a href="https://www.gov.uk/government/news/mot-changes-20-may-2018">MOT rule changes: 20 May 2018</a></li>
-<li><a href="https://www.gov.uk/government/news/ongoing-industrial-action-at-dvla">Ongoing industrial action at DVLA</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=news_story&amp;count=10">Source query from Search API</a></p>
 
