--- a/document-types/research_for_development_output.html
+++ b/document-types/research_for_development_output.html
@@ -363,13 +363,13 @@ actually any pages with this document type.</p>
 <li><a href="https://www.gov.uk/research-for-development-outputs/implementing-inclusive-education">Implementing Inclusive Education</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/fair-society-healthy-lives-the-marmot-review-strategic-review-of-health-inequalities-in-england-post-2010">Fair society, healthy lives : the Marmot Review : strategic review of health inequalities in England post-2010.</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/nature-based-solutions-a-review-of-key-issues-in-india">Nature based Solutions - A Review of key Issues in India</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/policy-processes-and-political-economy-tanzania-country-review"> Policy Processes and Political Economy: Tanzania Country Review</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/treatments-for-suppression-of-lactation">Treatments for suppression of lactation</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/policy-processes-and-political-economy-tanzania-country-review"> Policy Processes and Political Economy: Tanzania Country Review</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/policing-and-marginalised-groups">Policing and Marginalised Groups</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/the-education-for-all-and-inclusive-education-debate-conflict-contradiction-or-opportunity">The Education for All and inclusive education debate: conflict, contradiction or opportunity?</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/benefits-of-stem-education">Benefits of STEM Education</a></li>
+<li><a href="https://www.gov.uk/research-for-development-outputs/global-trends-in-antimicrobial-use-in-food-animals">Global trends in antimicrobial use in food animals</a></li>
 <li><a href="https://www.gov.uk/research-for-development-outputs/turkey-and-the-gulf-states-in-the-horn-of-africa-fluctuating-dynamics-of-engagement-investment-and-influence">Turkey and the Gulf States in the Horn of Africa: fluctuating dynamics of engagement, investment and influence</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/re-form-lessons-for-urban-governance-futures-from-the-pandemic">Re FORM: Lessons for Urban Governance futures from the Pandemic</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/etiologies-of-illness-among-patients-meeting-integrated-management-of-adolescent-and-adult-illness-district-clinician-manual-criteria-for-severe-infections-in-northern-tanzania">Etiologies of illness among patients meeting integrated management of adolescent and adult illness district clinician manual criteria for severe infections in northern Tanzania</a></li>
-<li><a href="https://www.gov.uk/research-for-development-outputs/rapid-assessment-of-the-impact-of-covid-19-on-food-systems-and-rural-livelihoods-in-sub-saharan-africa-synthesis-report-2">Rapid Assessment of the Impact of Covid-19 on Food Systems and Rural Livelihoods in Sub-Saharan Africa – Synthesis Report 2</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=research_for_development_output&amp;count=10">Source query from Search API</a></p>
 
