--- a/document-types/transparency.html
+++ b/document-types/transparency.html
@@ -364,15 +364,15 @@
       </div><h2 id='example-pages'>Example pages</h2>
 <ul>
 <li><a href="https://www.gov.uk/government/publications/royal-courts-of-justice-cause-list">Royal Courts of Justice Cause List</a></li>
-<li><a href="https://www.gov.uk/government/publications/coronavirus-grant-funding-local-authority-payments-to-small-and-medium-businesses">Coronavirus grant funding: local authority payments to small and medium businesses</a></li>
 <li><a href="https://www.gov.uk/government/publications/employers-who-have-claimed-through-the-coronavirus-job-retention-scheme">Employers who have claimed through the Coronavirus Job Retention Scheme</a></li>
+<li><a href="https://www.gov.uk/government/publications/coronavirus-grant-funding-local-authority-payments-to-small-and-medium-businesses">Coronavirus grant funding: local authority payments to small and medium businesses</a></li>
 <li><a href="https://www.gov.uk/government/publications/business-and-property-courts-rolls-building-cause-list">Business and Property Courts Rolls Building Cause List</a></li>
-<li><a href="https://www.gov.uk/government/publications/the-queens-birthday-honours-2021">The Queen&rsquo;s Birthday Honours 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/current-registered-providers-of-social-housing">Current registered providers of social housing</a></li>
+<li><a href="https://www.gov.uk/government/publications/the-queens-birthday-honours-2021">The Queen&rsquo;s Birthday Honours 2021</a></li>
 <li><a href="https://www.gov.uk/government/publications/senior-officials-high-earners-salaries">Cabinet Office senior officials &lsquo;high earners&rsquo; salaries</a></li>
 <li><a href="https://www.gov.uk/government/publications/reported-coronavirus-covid-19-cases-by-registered-early-years-and-childcare-settings">Reported coronavirus (COVID-19) notifications by registered early years and childcare settings</a></li>
 <li><a href="https://www.gov.uk/government/publications/data-informing-international-travel-traffic-light-risk-assessments-24-june-2021">Data informing international travel traffic-light risk assessments, 24 June 2021</a></li>
-<li><a href="https://www.gov.uk/government/publications/coronavirus-england-briefing-30-june-2021">Coronavirus England briefing, 30 June 2021</a></li>
+<li><a href="https://www.gov.uk/government/publications/active-mot-test-stations">Active MOT test stations</a></li>
 </ul>
 <p><a href="https://www.gov.uk/api/search.json?filter_content_store_document_type=transparency&amp;count=10">Source query from Search API</a></p>
 
