--- a/manual/zendesk.html
+++ b/manual/zendesk.html
@@ -141,6 +141,9 @@
       </li>
       <li>
         <a href="#triaging-a-ticket"><span>Triaging a ticket</span></a>
+      </li>
+      <li>
+        <a href="#passing-to-another-government-department-or-service-team"><span>Passing to another government department or service team</span></a>
         <ul>
           <li>
             <a href="#service-level-agreements"><span>Service Level Agreements</span></a>
@@ -210,7 +213,7 @@
 
    <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/e09dc302133a0a0b80e166c8e4eb8a9b56364537">17 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/govuk-developer-docs/commit/3be8b9957e3ba0c869225997525a96ecb3af9169">6 Jul 2021</a>
 </div>
 
  <h1 id='header'>Zendesk</h1> <p>2nd line Zendesk tickets are technical errors reported by our users, including government publishers.</p>
@@ -228,7 +231,14 @@ it).</p>
 <p>Once you&rsquo;ve established that a ticket is legitimate, you should follow <a href="https://docs.google.com/presentation/d/1EotoM2CVtqlnx54Qz5bP7OyIx5c9ji_GptUuymHkBrc/edit">the process in this diagram</a>.
 There is a printout on the 2nd line desk.</p>
 <p>In all cases, 2nd line will respond to the ticket, even if it is simply a note to the user saying that
-you&rsquo;ve passed their request to the relevent team.</p>
+you&rsquo;ve passed their request to the relevant team.</p>
+<h2 id='passing-to-another-government-department-or-service-team'>Passing to another government department or service team</h2><p>Sometimes a ticket relates to a service run by another government department. To transfer the ticket:</p>
+
+<ul>
+<li>click on Apply macro</li>
+<li>select Inside government &gt; Pass through</li>
+<li>select the relevant department or service</li>
+</ul>
 <h3 id='service-level-agreements'>Service Level Agreements</h3><p>GOV.UK have committed to a minimum service level agreement for 2nd line support.</p>
 
 <ul>
