Hourly scheduled redeploy 52ee8feeaa9e96e18a16d5b7e03dc399bedcc2d3

--- a/apps/smart-answers.html
+++ b/apps/smart-answers.html
@@ -452,6 +452,7 @@
       <ul>
                 <li><a href='/apps/smart-answers/arch/adr-001-removing-smartdown.html' class='govuk-link'>ADR 1: Removing Smartdown</a></li>
         <li><a href='/apps/smart-answers/arch/002-store-responses-in-query-string.html' class='govuk-link'>ADR 2: Store responses in query string</a></li>
+        <li><a href='/apps/smart-answers/arch/003-testing-flows.html' class='govuk-link'>ADR 3: Testing Flows</a></li>
 
       </ul>
 
