Hourly scheduled redeploy e4a54ca86434b865ae9f3a4908dbc561f8ca78ec

--- a/apps/smart-answers/tasks/fact-check.html
+++ b/apps/smart-answers/tasks/fact-check.html
@@ -367,7 +367,7 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/fc0fa6097861510c82343c45ccedbd95453accc6">9 Jul 2021</a>
 </div>
 
   <h1 class="page-title">smart-answers: Deploying changes for fact-check</h1>
@@ -378,7 +378,7 @@ are deployed to GOV.UK you can make use of [Heroku Review apps][].
 These are created automatically when a new PR is opened and will also be
 automatically linked to from the PR. They will also update on each new commit
 to the PR.</p>
-<p>The master branch of Smart Answers is deployed to Heroku with each update and
+<p>The main branch of Smart Answers is deployed to Heroku with each update and
 this allows previewing draft Smart Answers. This is available at
 <a href="https://smart-answers-preview.herokuapp.com/">https://smart-answers-preview.herokuapp.com/</a>.</p>
 <h2 id="displaying-rates-for-a-specific-date">Displaying rates for a specific date</h2>
