--- a/apps/smart-answers/tasks/publishing.html
+++ b/apps/smart-answers/tasks/publishing.html
@@ -367,14 +367,14 @@
 
   <div class="govuk-!-font-size-16 govuk-!-margin-top-6">
 
-  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/1477fc852d0052f5c003cffd71ea34ed09d2dfc7">14 Jun 2021</a>
+  Last updated: <a href="https://github.com/alphagov/smart-answers/commit/115c2b2ccf897e51f35ff6b104cc4415c73a30ea">9 Jul 2021</a>
 </div>
 
   <h1 class="page-title">smart-answers: ## Publishing</h1>
 
   <h3 id="publishing">Publishing</h3>
-<p>Changes to smart answer pages need to be sent to be sent to the <code>content store</code> for them to appear on GOV.UK.</p>
-<p>The <a href="https://github.com/alphagov/smart-answers/blob/master/lib/tasks/publishing_api.rake">rake task <code>publishing_api:sync_all</code></a> needs to be run once you have deployed your changes in each environment and can be done in <a href="https://deploy.integration.publishing.service.gov.uk/job/run-rake-task/parambuild/?TARGET_APPLICATION=smartanswers&amp;MACHINE_CLASS=calculators_frontend&amp;RAKE_TASK=publishing_api:sync_all">Jenkins</a>.</p>
+<p>Changes to smart answer pages need to be sent to the Publishing API for them to appear on GOV.UK.</p>
+<p>The <a href="https://github.com/alphagov/smart-answers/blob/main/lib/tasks/publishing_api.rake">rake task <code>publishing_api:sync_all</code></a> needs to be run once you have deployed your changes in each environment and can be done in <a href="https://deploy.integration.publishing.service.gov.uk/job/run-rake-task/parambuild/?TARGET_APPLICATION=smartanswers&amp;MACHINE_CLASS=calculators_frontend&amp;RAKE_TASK=publishing_api:sync_all">Jenkins</a>.</p>
 
 
             
